# drf-deny-allow-pc

./: .gitignore  .travis.yml  README.rst  circle.yml  manage.py  monkeytype_config.py  mypy.ini  pyproject.toml  runtests.py  setup.py  tox.ini
.circleci/: config.yml
docs/: Makefile  conf.py  index.rst  license.rst  license.txt
docs/_build/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  permissions.html
drfdapc/: .bandit  __init__.py  permissions.py  test_permissions.py
requirements/: flake8.txt  monkeytype.txt  requirements-dj111.txt  requirements-dj22.txt
tests/: requirements-dj111.txt  requirements-dj18.txt  requirements-dj20.txt  requirements-flake8.txt  requirements.txt  test_settings.py
